Thu Jul  3 23:33:47 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* HTTP_Response.cpp (~HTTP_Response): changed delete to delete [],
	  removing a major memory leak from JAWS.  Still to find is a
	  memory lead associated with thread per request.  Nanbor's fix is
	  about what I did to EMPTY_HEADER too.

	* JAWS_File.cpp: David points out I need to add specializations
	  for the GNU C++ compiler.

Thu Jul  3 22:38:04 1997  Nanbor Wang  <nw1@cumbia.cs.wustl.edu>

	* HTTP_Response.cpp (build_headers): Added explicit cast for
 	  EMPTY_HEADER from (const char *) to (char *) in order to make
 	  MSVC happy.  This is probably very badly styled.  But
 	  HTTP_HEADER is only used in places that require (const char *),
 	  so I think it's safe to do so.

Thu Jul  3 15:34:30 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* HTTP_Response.cpp (HTTP_Response): Moved a call to delete out of
	  constructor into the destructor where it belongs.

Thu Jul  3 12:28:44 1997  Sumedh Mungee  <sumedh@lindy.cs.wustl.edu>

	* Parse_Headers.cpp: Line 137, Changed pt to ptr (it was a typo)

Wed Jul  2 22:33:52 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* JAWS_File.{h,cpp}: Fixed deadlock bug, since RW_MUTEX's are not
	  recursive (drat!).

Wed Jul  2 21:03:12 1997  Douglas C. Schmidt  <schmidt@flamenco.cs.wustl.edu>

	* Made a major pass through all the code and made the style
	  consistent with that found in ACE.

Wed Jul  2 14:33:27 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* JAWS_File.cpp: Added double check locking pattern to the fetch
	  routine of the virtual filesystem.  This slows things down
	  considerably for files which change frequently and for cache
	  misses in general, but it should be correct.

Wed Jul  2 14:59:29 1997  Nanbor Wang  <nw1@cumbia.cs.wustl.edu>

	* HTTP_Helpers.cpp (HTTP_decode_string): Added cast from strtol to
 	  char explicitly to prevent NT from complaining.

Wed Jul  2 14:33:27 1997  James C Hu  <jxh@lambada.cs.wustl.edu>
