@@ -1,3 +1,10 @@
+Sat Jul  5 14:19:20 1997  Douglas C. Schmidt  <schmidt@flamenco.cs.wustl.edu>
+
+	* HTTP_Server.cpp (open): Added THR_DETACHED as a flag to
+ 	  activate().  This should prevent a memory leak that was
+ 	  occurring since no thread was ever "joining" the threads that
+ 	  were spawned.
+
 Thu Jul  3 23:33:47 1997  James C Hu  <jxh@lambada.cs.wustl.edu>
 
 	* HTTP_Response.cpp (~HTTP_Response): changed delete to delete [],
